--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,18 +30,18 @@
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11704130.md#1">¡¾Ê®×ÖÂ·¿Ú¡¿·¿Æó¼¯ÌåÆÆ²ú ÖÐ¹úÕ®Îñ·ç±©À´Ï®</a><br>
 <br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/nf6092.md#1">¸ü¶à......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11718851.md#1">ÏÃÃÅµØÌúµØÃæËúÏÝ 2³µ×¹Èë ´óÁ¿»ýË®Ó¿Èë</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11718293.md#1">ÃÀ¼®»ªÈËÉÏº£Î¬È¨ ÊÜÃ³Ò×Õ½²¨¼° »¤ÕÕ±»Ã»ÊÕ</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11718649.md#1">ÉÂÎ÷Ê¡¼ÍÎ¯¡°Ìü¼¶ÄÚ¹í¡±ºú´«Ïé±»ÅÐ9Äê</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11718446.md#1">ÐÞÀý¿¹Õù°ëÄê ¸ÛÈË¼²ºô£º¶ôÖ¹¾¯±©»¹Ãñ¹«Òå</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717140.md#1">¡¾Ê®×ÖÂ·¿Ú¡¿12/15ÃÀÖÐ´ïÐ­Òé£¿Èô¼ÓË°Ë­ÖØÉË</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717043.md#1">¡¾·­Ç½±Ø¿´¡¿ÖÐ¹²¸ß²ãÎª×Ô¼º×¼±¸ºóÂ·</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11718287.md#1">ÀîÎÄ×ã»ñ·¨µÂÈËÈ¨·¨ÖÎ½± Ë¦µô¹ú±£³É¹¦Áì½±</a><br>
-<a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11718113.md#1">¡¾Ö±²¥ÖÐ¡¿·´±©Õþ°ëÄê ¸ÛÈË¾ÙÐÐÆëÉÏÆëÂä¼¯»á</a><br>
+<a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11718113.md#1">¡¾Ö±²¥»Ø·Å¡¿·´±©Õþ°ëÄê ¸ÛÈË¾ÙÐÐÆëÉÏÆëÂä¼¯»á</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716949.md#1">2019´óÂ½³µÆó°ÙÏà£º±£Ãü¡¢ÍËÊÐ¡¢¾Þ¿÷¾ãÈ«</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717853.md#1">ÈýÐÇ¹Ø±Õ»ÝÖÝ¹¤³§²úÉúºûµûÐ§Ó¦ ÖÜ±ßËÆ¹í³Ç</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717811.md#1">ÍõÓÑÈº£ºÑÏ³ÍÈËÈ¨¶ñ¹÷ º´ÎÀÌì¸³ÈËÈ¨</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717983.md#1">ºþÄÏÇ°¸±Ê¡³¤ÊÜ»ß6667Íò ÔøÊÇÇØ¹âÈÙÏÂÊô</a><br>
-<a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11699673.md#1">ÉñÔÏ·çÃÒÅ·ÖÞ ±»ÓþÎª¡°ÊÀ½çµÚ°Ë´óÆæ¼£¡±</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11718625.md#1">ÂÞË¹£ºÃ³Ò×Õ½Ã¿ÍÏÒ»Ìì ¶ÔÃÀ¹ú¾ÍÔ½ÓÐÀû</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11718312.md#1">Ì¨ÐÐÕþÔº³¤£º¾³ÍâÊÆÁ¦Ó°ÏìÑ¡¾Ù±ØÍ´¼Ó´ò»÷</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11718180.md#1">11ÔÂ·Ý ÖÁÉÙ325Ãû·¨ÂÖ¹¦Ñ§Ô±Ôâ°ó¼Ü</a><br>
@@ -60,12 +60,12 @@
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717219.md#1">É½¶«90ºóÄÐ×Ó¾ÈÇáÉúÅ®Ë«Ë«ÓöÄÑ</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717179.md#1">ÖÐ¹ú¹º58.5Íò¶ÖÃÀ¹ú´ó¶¹ 4ÔÂ·ÝÀ´×î´ó×Ú</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717105.md#1">´óÂ½×îÐÂ·ÇÖÞÖíÎÁÒßÇé ÉÂÎ÷ÓÐÒ°ÖíËÀÍö</a><br>
+<a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716553.md#1">ºÚ¾¯¾âÃÅÏà±Æ ·¨ÂÖ¹¦Ñ§Ô±ÀîÑÞ½Ü±»ÆÈÌøÂ¥ÓöÄÑ</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717108.md#1">ÖÐ¹²ÍþÐ²±¨¸´ÃÀ¿Æ¼¼¹«Ë¾ ÃÀÒéÔ±ÃÇÇ¿Ó²»ØÓ¦</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712401.md#1">ÃÀÖÐ¹ú×¨¼Ò³öÊé ½ÒÖÐ¹²³¬¼¶¼äµýÔâÅ×Æú£¨ÏÂ£©</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11716957.md#1">ÕÅÏþÃ÷ÔÙÌá23Ìõ ¸Û¿¹ÒéÕß£º½«ÖÂÖÐ¹²¸²Ãð</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717047.md#1">ÍâÃ½£ºÖÐ¹ú¾³ÄÚÕ®ÎñÎ¥Ô¼·çÏÕ ÂûÑÓÖÁº£Íâ</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717137.md#1">ÁÉÄþ¸§Ë³Ê¯ÓÍ¶þ³§Í»·¢´ó»ð »ð¹â³åÌì</a><br>
-<a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716553.md#1">ºÚ¾¯¾âÃÅÏà±Æ ·¨ÂÖ¹¦Ñ§Ô±ÀîÑÞ½Ü±»ÆÈÌøÂ¥ÓöÄÑ</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711264.md#1">ÖÐ¹²Ì¬¶È·´¸´ ÈÎÕý·Ç¼Ò×åÐÎÏó¿ìËÙ±ÀÀ£</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11701016.md#1">ÃÀÎªºÎµãÃûÒªÖÆ²Ã¡¶´ó¹«±¨¡·¡¶ÎÄ»ã±¨¡·</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11716997.md#1">ÀîÎÄ×ã»ñ·¨µÂÈËÈ¨·¨ÖÎ½± ¹ú±£Óû×èÁì½±²»¹û</a><br>
@@ -88,7 +88,7 @@
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716284.md#1">ÐÂÎÅ×ÔÓÉ¶ñ»¯ ÖÐ¹²½ñÄê¼à½û¼ÇÕßÊýÈ«ÇòµÚÒ»</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715995.md#1">ÂÌµ³Ãñµ÷£º½ü7³ÉÌ¨ÍåÃñÖÚ¶ÔÖÐ¹²·´¸Ð</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715991.md#1">ÖÐ¹²·ñÈÏ½éÈëÌ¨´óÑ¡ Â½Î¯»á£ºÊÂÊµÊ¤ÓÚÐÛ±ç</a><br>
-<br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ">ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³">¾ÅÆÀ¹²²úµ³</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ">¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"">ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý">ÆÊÎö1400Àý</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì">Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°">Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯">¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª">ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½">ÌúÖ¤ÈçÉ½</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ">Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦">µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ">ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá">Ë«³ÇÑªÀá</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤">ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720">´Ó610µ½720</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ">ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà">ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó">±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513">¼ûÖ¤513</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ">¹¦·ò Ñ°µÀ</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£">¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ">ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ">ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://ddh3kfu81i0ja.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²">Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ">ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª">¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·">Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨">303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î">º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½">Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°">²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
+<br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ">ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³">¾ÅÆÀ¹²²úµ³</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ">¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"">ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý">ÆÊÎö1400Àý</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì">Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°">Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯">¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª">ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½">ÌúÖ¤ÈçÉ½</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ">Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦">µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ">ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá">Ë«³ÇÑªÀá</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤">ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720">´Ó610µ½720</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ">ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà">ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó">±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513">¼ûÖ¤513</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ">¹¦·ò Ñ°µÀ</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£">¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ">ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ">ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://d118n2up1tvp3x.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²">Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ">ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª">¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·">Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨">303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î">º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½">Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°">²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>ÖÐ¹úÈËÈ¨</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716131.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/191211090946100699-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716131.md#1">»ª¸®ÈËÈ¨ÈÕÑÐÌÖ»á ¹ú»áÒéÔ±ÉùÔ®3.47ÒÚÈËÍËµ³</a><br>12ÔÂ10ÈÕÊÇ¹ú¼ÊÈËÈ¨ÈÕ£¬¡°È«Çò·´ÆÈº¦ ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715977.md#1">Ì¨Íâ³¤£ºÈôÖÐ¹²ÎäÁ¦½éÈëÏã¸Û Ì¨ÍåÔ¸Öú¸ÛÈË</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714459.md#1">ÃÀ¹úÖÆ²ÃÇ×¹²¸ÛÃ½ ÐÇµºÀÏ°åÎªºÎÔâÈÈÒé</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715043.md#1">´¨ÆÕÐû²¼ÈËÈ¨ÈÕ ÃÀ½«ÑÏ·£ÇÖ·¸ÈËÈ¨ÐÐÎª</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714779.md#1">±»ÏÞÖÆ³ö¾³ ³ÂÇïÊµ£ºÕþÈ¨»á¸üµü Ìì¿ìÁÁÁË</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708713.md#1">½ÒÄÚÃÉ¹ÅÄªÆì¿´ÊØËù¶ñÐÐ ¿áÐÌÆÈº¦·¨ÂÖ¹¦</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÖÐ¹ú¾­¼Ã</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716196.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2018/08/0f3e56dd143ff14ec950e101fe9d9075-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716196.md#1">½ñÄêÓâ°ËÍòÖÐ¹ú·¿ÆóÍ£Òµ ±ÈÈ¥ÄêÔö½ü40%</a><br>ÖÐ¹ú·¿µØ²úÏà¹ØÆóÒµµÄ¾­Óª×´¿ö³ÖÐøµÍ ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716268.md#1">È·±£Ï¡ÍÁ¹©Ó¦ ÃÀ¾ü²ÉÈ¡×Ô¶þÕ½ÒÔÀ´½ô¼±ÐÐ¶¯</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714790.md#1">ÄÉÍßÂÞ£º´¨ÆÕ½«¾ö¶¨ÊÇ·ñ12ÔÂ¼ÓË°ºÍÇ©Ð­Òé</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714821.md#1">ÍâÃ½£ºÓë»ªÎªÇ©Ô¼»»Ã³Ò× ÖÐ¹²Ê©Ñ¹·¨ÂÞÈºµº</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714683.md#1">Ïã¸Û¿Í»§ÔâÕþÉó ´óÂ½ÑØº£Ð¡ÉÌ»§¾­¼ÃÊÜËð</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714584.md#1">ÖÐ¹úÃñÆóÉú´æÏÝÀ§¾³ ¡°¹ú×ÊÏµ¡±³Ã»úÊÕ±à</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid283.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>´óÂ½ÕþÖÎ</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713539.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/02d2bed17e7ca46e084a6671f9d48970-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713539.md#1">ÖÐ¹²½éÑ¡Ì¨Íå3¹ÜµÀ ÃÀÑ§Õß£ººÚµÀ Ì¨ÉÌ ×Ú½Ì</a><br>2020×ÜÍ³Ñ¡¾Ù½øÈëµ¹Êý1¸öÔÂ£¬ÖÐ¹²½éÈ ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716194.md#1">P2Pµ¹ÁËÁìµ¼ÏÈÅÜ ÖÐ¹ú½ðÈÚ·´¸¯²ØÌØÈ¨</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715875.md#1">½â³ýÃñÖ÷ÅÉÒéÔ±³ÂÊç×¯Ö°Îñ¶¯Òé±»·ñ¾ö</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714980.md#1">´óÂ½Ë¾·¨½çÁ½Ì°¹Ù±»´þ²¶ Ò»ÈËÓëÖÜÓÀ¿µÓÐ¹ØÏµ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715447.md#1">ÑëÊÓµ¼µ¯»­ÃæÉæÏÓÔì¼Ù Ôâ¾ü·½ÄÚ²¿ÈËÊ¿²ð´©</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714983.md#1">Ìì½ò½ÖµÀÊé¼ÇÌ°3ÒÚÇô18Äê Ã¿ÌìÌÉÇ®ÉÏË¯¾õ</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid277.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÌìÔÖÈË»ö</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711924.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-954036218-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711924.md#1">ÇÖ´óÂ½²¢¶¨Ö³ ²ÝµØÌ°Ò¹¶êÃ÷Äê¿Ö½ø±©·¢½×¶Î</a><br>ÖÐ¹²Å©ÒµÅ©´å²¿³Æ£¬²ÝµØÌ°Ò¹¶ê½ñÄêÈë ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715631.md#1">ÄÚÃÉ¹ÅÍ¨ÁÉÊÐ¸ßËÙÂ·ÉÏ´ó¿Í³µ²à·­ ÖÂ53ÉË</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714843.md#1">ºÓÄÏÒ»´åÃñÓÃÈýÂÖÄ¦ÍÐÔØ6ÈË×¹ÑÂ 6ËÀ1ÉË</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714742.md#1">ÌÆÉ½µØÕðºó±±¾©²ýÆ½ÓÖµØÕð ÍøÃñ£º½ñÄê·´³£</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712523.md#1">°²»ÕÁù°²¸ßËÙÂ·½ÓÁ¬·¢Éú³µ»ö ¹²ÖÂ6ËÀ10ÉË</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712260.md#1">Òõö²Ìì´óÂ½¶àµØº½°àÑÓÎó Í¨ÐÐÄÜÁ¦½µ50£¥</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>Éç»áÍòÏó</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714758.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/5df0543ec6c22-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714758.md#1">¼ÓÄÃ´ó¹ú»áÌØ±ðÎ¯Ô±»á³ÉÁ¢ Éó²é¼ÓÖÐ¹ØÏµ</a><br>Áª°î±£ÊØµ³Íâ½»ÆÀÂÛÔ±¡¢ÖÚÒéÔ±°ÂÍ¼¶û ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713953.md#1">¹ØÑºÁ½Ãû¼Ó¹úÈËÒ»Äêºó ÖÐ¹²³ÆÆä±»Éó²éºÍÆðËß</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713860.md#1">ÖÚÔºÃñÖ÷µ³Ìá2Ïîµ¯ÛÀÖ¸¿Ø ´¨ÆÕ»ØÓ¦£º»ÄÃý</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713745.md#1">²ØÉí¼Ò¾ß´ÓÄ«Î÷¸çÍµ¶ÉÃÀ¹ú 11ÖÐ¹úÈË±»¾Ð</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713224.md#1">ÊÓ¾õÖÐ¹úÔÙÔâÖÐ¹²ÍøÐÅ°ìÔ¼Ì¸ ±»ÆÈÔÝÍ£·þÎñ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713237.md#1">´óÂ½³öÏÖ¶þÀýÐÂH9N2Á÷¸Ð²¡Àý</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>¿Æ½ÌÎÄ»¯</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715454.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/35-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715454.md#1">Ê¦µÂÉ¥¾¡ ±±´ó½ÌÊÚÓë¶àÈËÓÐ²»Õýµ±¹ØÏµ</a><br>12ÔÂ11ÈÕ£¬±±¾©´óÑ§Í¨±¨£¬¾­µ÷²é£¬¸Ã ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712329.md#1">¡¶¼Ù¿××ÓÖ®Ãû¡·Ä½ÄáºÚ·ÅÓ³ ½ÒÂ¶ÖÐ¹²ÉøÍ¸</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712101.md#1">»ªÈË¼Ò³¤£º¿××ÓÑ§ÔºÅàÑøÖÐµÂ»ìÑª¶ù ÒâÔÚÉøÍ¸</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11710758.md#1">ÖÐ¹ú¿ÆÑ§¼Ò´´Öíºï»ìÖÖ¶¯Îï ¹ú¼Ê¿ÆÑ§¼ÒÇ´Ôð</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706340.md#1">ÖÐ¹²³ÍÖÎË«ÖØ¹ú¼®£¿ÀîÁ¬½ÜµÈÃ÷ÐÇ±»Íø¾¯µãÃû</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705412.md#1">À¼ÖÝÊÞÑÐËù65ÈËÑªÇåÑ§ÑôÐÔ ÒÉËÆ²¼²¡¸ÐÈ¾</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid281.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>ÍøÎÅ½ûÎÅ</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11707663.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_586447673-600x400-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11707663.md#1">ÃÀÍ¼Æ¬ÉÌÅäºÏÖÐ¹²½¨ºÚÃûµ¥ Ô±¹¤ÇëÔ¸º°Í£</a><br>ÃÀ¹úÔÚÏßÐÂÎÅÍøÕ¾¡°The Intercept¡±Ö ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703901.md#1">»ªÎªÊ§ÃñÐÄ ÃÏÍíÖÛ¼¦ÌÀÐÅ°Ü¸øÀîºéÔª251</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11697873.md#1">¸ÛÈËÉí·Ý±äÃô¸Ð£¿½»ÒøÏã¸ÛÊ×Ï¯¾­¼ÃÊ¦±»³´</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698082.md#1">¸üÑÏÖÆ²Ã ´«°×¹¬Äâ½«»ªÎªÌÞ³öÃÀÒøÐÐÌåÏµ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11696142.md#1">ÖÐ¹²ÖÆ²ÃÃÀÈËÈ¨×éÖ¯ ±»Ö¸¡°À×Éù´óÓêµãÐ¡¡±</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11696073.md#1">ÃÀ²ÎÒéÔ±»ØÓ¦ÖÐ¹²±¨¸´ Ö¸±±¾©·¢Æ¢ÆøÃ»ÓÃ</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid2420.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÈºÌåÊÂ¼þ</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714651.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13934610-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714651.md#1">¹ú¼ÊÈËÈ¨ÈÕ ¶àÎ»´óÂ½Î¬È¨ÈËÊ¿±»¿ØÖÆ²»ÄÜÍâ³ö</a><br>12ÔÂ10ÈÕ¹ú¼ÊÈËÈ¨ÈÕ£¬ÖÐ¹ú¶àÃûÎ¬È¨ÈË ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713727.md#1">²Î¼ÓÈËÈ¨ÈÕ»î¶¯ ÃÀ×¤»ª´óÊ¹¹ÝÇ°ÊýÊ®ÈË±»×¥</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11707400.md#1">ÒßÃçÊÜº¦¶ùÍ¯µ½±±¾©ÎÀ½¡Î¯Î¬È¨ ÓÐ¼Ò³¤±»¾Ð</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11701647.md#1">·¨ÖÆÈÕ¸÷µØÃñÖÚÎ¬È¨ ¹úÐÅ¾Ö·ÃÃñÈËÍ·Ó¿Ó¿</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698433.md#1">ÖÐ¹²¾å¿¹ÕùÂûÑÓÈ«¹ú Ã¯Ãû¡°Ê±´ú¸ïÃü¡±³É¹¦</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/1/n11692726.md#1">Íø´«¹ã¶«´åÃñº°¡°Ê±´ú¸ïÃü¡±·´¿¹¾¯²ìÕòÑ¹</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid279.md#1">¸ü¶à......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>¾ÅÆÀ¹²²úµ³</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">¡¾Ò»¡¿ÆÀ¹²²úµ³ÊÇÊ²Ã´</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">¡¾¶þ¡¿ÆÀÖÐ¹ú¹²²úµ³ÊÇÔõÑùÆð¼ÒµÄ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">¡¾Èý¡¿ÆÀÖÐ¹ú¹²²úµ³µÄ±©Õþ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">¡¾ËÄ¡¿ÆÀ¹²²úµ³ÊÇ·´ÓîÖæµÄÁ¦Á¿</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">¡¾Îå¡¿ÆÀ½­ÔóÃñÓëÖÐ¹²Ïà»¥ÀûÓÃÆÈº¦·¨ÂÖ¹¦</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">¡¾Áù¡¿ÆÀÖÐ¹ú¹²²úµ³ÆÆ»µÃñ×åÎÄ»¯</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">¡¾Æß¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÉ±ÈËÀúÊ·</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">¡¾°Ë¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÐ°½Ì±¾ÖÊ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">¡¾¾Å¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÁ÷Ã¥±¾ÐÔ</a></td><td VALIGN=TOP width="352"><h2><p><strong>ÈýÍË´ó³±</strong></p></h2><strong>ÍË³öÖÐ¹²µ³¡¢ÍÅ¡¢¶Ó×ÜÈËÊý:
 
