--- a/gb/news2008_2.md
+++ b/gb/news2008_2.md
@@ -1,4 +1,20 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712411.md#1" target="_blank">神力女超人即将回归大银幕 预告片抢先看</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712411.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1192734749-150x120.jpg" align ="left"></a>继2017年的卖座电影《神力女超人》（Wonder Woman，或译《神奇女侠》）之后，另一部改编自DC漫画、同样以神力女超人为主题的超级英雄电影将于明年上映。而它的预告片已经公开，可以让影迷们先睹为快。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:52 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711671.md#1" target="_blank">【胡乃文开讲】闪到腰超痛！紧急时刻1招立即缓解</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711671.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/twist-waist-pain2-1209-150x120.jpg" align ="left"></a>你知道吗？大多数人会闪到腰，常常是因为拿东西的姿势不对。例如：有的人拿东西时，不是先蹲下再拿起来，而是弯着腰拿起来，这就容易闪到腰。平常睡姿或工作时坐姿不对，也可能造成闪腰问题。闪腰在中医学上这都是可以治的。如果是急性闪腰怎么办？教你一个最简单的急救穴道“扭伤穴”。扭伤穴其实就是手三里穴，它治疗扭伤很有效。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 5:03 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11711696.md#1" target="_blank">房子没有卖相 行家有啥高招？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11711696.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_1711217542-600x400-1-150x120.jpg" align ="left"></a>买房固然是一件费时、费力、费脑筋的事，卖房其实也不容易，尤其是在市场不好的时候。这时，可以参考一下行家的做法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 4:02 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711220.md#1" target="_blank">为何加州的住房噩梦快达临界点？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711220.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15cc82883d570f34_ttl7day5Tn_shutterstock_370770656-150x120.jpg" align ="left"></a>编译：李欧?大纪元
+加州最近的一场野火，再度使加州住房陷入风险，原本已经紧迫的住房危机，每年又被野火吞噬无数的房产，加上建房速度不够快和土地区划的限制，加州的住房恶梦正在达到临界点。
+
+据彭博社专栏指出，目前，加州房屋中位价已超过60万美元，是全国平均水平的两倍多。加州拥有全国5个最昂贵的住宅市场中的4个，分别是.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:19 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711222.md#1" target="_blank">快走或遛狗30分钟 可降低男性糖尿病风险</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711222.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/walking-diabetes_1148372342-150x120.jpg" align ="left"></a>缺少运动、久坐不动，是现代人常见的问题，也延伸出许多疾病，例如肥胖、心脏病和糖尿病。最新研究指出，男性每天只要快走或遛狗30分钟，就能降低血糖和食欲，进一步降低糖尿病风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:27 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/18/n11663142.md#1" target="_blank">好主管应该重当下还是重未来？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/18/n11663142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/67_Fotolia-150x120.jpg" align ="left"></a>当主管可以稳定的完成每一周期例行的工作后，真正的好主管还要能看未来、想未来、规划未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:54 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708870.md#1" target="_blank">组图：苏格兰圣诞老人慈善路跑 欢乐庆佳节</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708870.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912081045001758-150x120.jpg" align ="left"></a>12月8日，苏格兰格拉斯哥市中心举行一场别开生面的路跑活动，为有关癌症的慈善机构筹款。有超过8000人打扮成圣诞老人或麋鹿并带同爱犬参加5公里跑步，充满欢乐气氛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:29 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11710858.md#1" target="_blank">11月淡季 湾区房价造反了？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11710858.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15db84ae7dd42e2d_ttl7dayGP9_shutterstock_1217871688-150x120.jpg" align ="left"></a>文：李欧?大纪元
+从今年七月以来，湾区的销售中位数房价大概就是小幅波动震荡，从我们掌握的部分数据来看，八月约150万，是这个区间最低价，反而十一月却到了高点约155万。十一月的销售量1377，仅高于九月的1351（详见表一）。其实这也印证了之前我们所说的——湾区房市在放软，但却是软中带硬。
+
+
+
+旧金山湾区房.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:22 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708956.md#1" target="_blank">美国大学寻找的人才：6种脱颖而出的方法（下）</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708956.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15ddc369143ebbff_ttl7dayozm_shutterstock_1253455588-150x120.jpg" align ="left"></a>编译：艾薇?大纪元
 （接上文：美国大学寻找的人才：6种脱颖而出的方法（上））
 3. 美国大学申请 表现出对大学的兴趣
@@ -21,13 +37,6 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11704589.md#1" target="_blank">哈里森温泉的冬季灯节 湖畔灯光梦幻璀璨</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11704589.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Harrison-1-150x120.jpg" align ="left"></a>11月23日至2020年1月12日，哈里森温泉美丽的冬季——湖畔灯光节登场；户外合成滑冰场也将首次亮相。在钓鱼、远足、骑车、划桨或滑冰之后，再美美地泡一阵子温泉，自是相当惬意舒适……又到冬季灯光节了，湖中灯光倒影辉映着哈里森温泉的自然美景，令迷人的哈里森湖畔（Harrison Lake）更添浪漫温情。而在您露营、钓鱼、.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:09 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706665.md#1" target="_blank">冬季园艺8技巧 帮助植物应对寒冬</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706665.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_1254258316-150x120.jpg" align ="left"></a>在冬季时，家里后院的植物们，同样也进入了休眠模式。在这段时间里，如果我们能掌握一些重点，帮助植物对应寒冬，明年春天时，您家的后院肯定会展现出春意盎然的新面貌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 2:14 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706713.md#1" target="_blank">泰国签证新规一次看懂 不想附财力证明咋办？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706713.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/12/1212161058202343-150x120.jpg" align ="left"></a>要赴泰国旅游的民众注意了！申请观光签证将有新规定，未来必须提供3个月的财力证明影本，因新制引发抱怨延至2020年3月上路。如不想提供财力证明，还是可选择落地签，安排行程时可以细细比较，选择最适合自己的方式。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:28 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705692.md#1" target="_blank">都会男女会客室：他对未来茫然，我没有安全感</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705692.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/1003190818232175-150x120.jpg" align ="left"></a>感情的确很难像天秤一样，付出与获得无法取得平衡。然而，相爱的力量有多大，就能走多远！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 11:24 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706470.md#1" target="_blank">中国汽车销售持续低迷 外资车企纷离场</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706470.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1175991142-150x120.jpg" align ="left"></a>中国汽车市场连续17个月低迷，汽车企业的销量、利润持续下滑，业内人士预计明年将继续萎缩，目前在华投资的国际汽车品牌已经纷纷开辟其它市场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 8:48 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706022.md#1" target="_blank">39岁被诊断“四期胆管癌” 她积极对抗不放弃</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706022.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Cholangiocarcinoma-1206-150x120.jpg" align ="left"></a>被诊断“四期癌症”，任何人都不会心情平静，更何况是在家庭美满、事业有成的时候。现居香港的英国女子海伦·斯科特（Helen Scott）三年前获知自己罹患晚期胆管癌，她在网站上分享抗癌路上的点滴心得，读来令人感叹。根据胆管癌癌症肿块的位置，胆管癌可以大致分为肝内胆管癌和肝外胆管癌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:24 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705455.md#1" target="_blank">咖啡怎样喝更健康？专家教你7个方法</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705455.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/coffee_680069101-150x120.jpg" align ="left"></a>许多人担心，喝过量的咖啡对身体有害。但近10年来，许多研究显示出饮用黑咖啡的好处，好处包含对肝脏健康有益，以及能降低脑部疾病的风险。下面我们整理了一些营养师和专家的说法，让你从小地方开始，把咖啡越喝越健康。1. 添加中链脂肪酸油（MCT油）2. 加入肉桂粉3. 小心你用的甜味剂4. 避免空腹喝咖啡5. 加入坚果......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 2:49 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705932.md#1" target="_blank">乙肝病毒会“母婴传播”很多人理解错了</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705932.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/hepatitis-b-infant_85619536-150x120.jpg" align ="left"></a>乙型肝炎是华人常见病，人们常常谈肝炎色变，慢性乙型肝炎患者中很多人最终发展至肝硬化、肝癌，全世界超过一半的肝癌病例是乙型肝炎引起的。在乙型肝炎的传播中母婴传播是重要途径，因此不少乙肝妈妈生小孩后小心翼翼，不敢跟小孩有亲密接触，亲吻一下都提心吊胆半天，母乳喂养更是想都不敢想。那些行为会传染乙肝病毒，哪些行为不会？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:42 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705556.md#1" target="_blank">到国外养老？福布斯2020年退休宜居国出炉</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705556.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191206_shouhuihsu_shutterstock_570250474_02-150x120.jpg" align ="left"></a>挑选适宜自己海外养老居所时，应通盘考虑环境、气候、饮食、文化、语言、纳税、生活成本、医疗保障、亲友拜访、社会秩序、社交圈子、申请永居等多项因素。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 10:41 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705675.md#1" target="_blank">青春会客室：爸爸不赞成我和他同事交往</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705675.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/1003262311542175-150x120.jpg" align ="left"></a>倾听，是一种伦理的尊重，也是一种理性的表现。对话，才能聚焦问题；才不会各说各话，以致最后渐行渐远。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 8:51 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708076.md#1" target="_blank">汽车维修问与答：开暖气没有热风</a><br></h3>汽车维修问与答
 
 读者小袁问：您好，李师傅，我的车型号是2002年Toyota Camry，在做年检时修车师傅告知Engine Upper Right Stabilizer Mount Split，请问这个问题严重吗？谢谢。
@@ -45,7 +54,5 @@
 2)?关于混合动力汽车的任何新闻报导通常也谈论电动汽车。
 
 3)?由燃料电池驱动的车辆是电动汽车，现在新闻中燃料电池受到了广泛的关注.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 3:58 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706447.md#1" target="_blank">郑存柱：上了“红通”是否一定会被移民局递解？</a><br></h3>持合法签证进入美国的外国人，如果被本国通过国际刑警组织发出了红色通缉令，在现有的政策和实践中，常常会被美国移民海关执法局（ICE）上门抓捕，进入递解程序。能否在移民法庭说服移民法官，通过政治庇护或者结婚等理由，合法留在美国，甚至最终获得绿卡呢？这涉及到不少重要的法律问题。以下，笔者将一一给予详细的分析。
-第一：非政治.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 7:31 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/news2008_2.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/news2008_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_2.htm">http://www.epochtimes.com/gb/news2008_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
