--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -21,7 +21,7 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/19/n11598877.md#1" target="_blank">北京多区现阴霾天气 局地五级重度污染</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/19/n11598877.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1172684508-150x120.jpg" align ="left"></a>10月19日，北京多地出现阴霾天气，其中，通州、顺义达重度阴霾水平。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月19日 5:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/14/n11587946.md#1" target="_blank">无锡高架桥倾塌 桥梁专家分析原因</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/14/n11587946.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/VCG111254235547-2-150x120.jpg" align ="left"></a>大陆无锡市一高架桥日前发生倾塌，造成3死2伤。中共官方在事发第二天发布消息称，倾塌原因系运输车辆超载所致。不过，这个结论却引起民间舆论强烈反弹，大部分网民表示，倾塌或与设计及施工有关。那么，无锡高架桥倾塌到底是什么原因？谁的过错？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月15日 1:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/13/n11585838.md#1" target="_blank">哈尔滨金河桥 飞机舱卡在桥下</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/13/n11585838.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/0075WSKoly1g7wprew2iij30he08saad-150x120.jpg" align ="left"></a>13日上午，有民众在网上爆料，哈尔滨金河桥下，一辆挂车运载的空客A320飞机机舱被卡在桥下，无法动弹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月14日 3:58 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11657369.md#1" target="_blank">安徽蚌埠5间门面房着火 致5死3伤</a><br></h3>11月15日，中共安徽省应急管理厅网站消息，今天（15日）6时57分许，安徽蚌埠市龙子湖区淮河路车站新村853栋门面房发生火灾，导致5死，1重伤，2人轻伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 1:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/13/n11585704.md#1" target="_blank">无锡塌桥前 安徽一座大桥垮塌 断为三段</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/13/n11585704.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/7b9a7e1f7509feca0fb757febeb21c14-150x120.jpg" align ="left"></a>继江苏无锡一天桥倒塌后，安徽宣城市一座大桥也突然坍塌，尽管该事件未造成人员伤亡，但因为当地对外交通因此中断，令村民忧心水稻收成后无法及时卖出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月14日 3:05 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11654973.md#1" target="_blank">在北京确诊两名鼠疫患者 一人病情危重</a><br></h3>近日，两名内蒙古患者在北京被确诊为鼠疫的消息引发广泛关注。《新京报》14日最新报导称，目前一名患者病情危重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 5:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/12/n11651047.md#1" target="_blank">北京确认内蒙古2人染鼠疫</a><br></h3>北京市朝阳区政府12日晚通报，内蒙古锡林郭勒盟苏尼特左旗有2人经诊断为“肺鼠疫”确诊病例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 2:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/5/n11634752.md#1" target="_blank">深圳宝安国际机场高架桥线缆起火 浓烟滚滚</a><br></h3>11月5日中午12时左右，深圳宝安国际机场一座高架桥起火，暂时未造成人员伤亡。消防部门称，起火点是高架桥下的线缆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 5:13 PM							</td></tr>
